# naks_infosystem_backend

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
src/: _types.py  app.py  cli.py  database.py  db_engine.py  errors.py  middlewares.py  models.py  repositories.py  settings.py  shemas.py
src/api/auth/: dependencies.py  routes.py
src/api/v1/: dependencies.py  routes.py
src/app/: configs.py
src/app/application/: dto.py
src/app/application/common/: exc.py  select_stmt_creator_configs.py
src/app/application/interactors/: __init__.py  acst.py  ndt.py  personal.py  (+1 more)
src/app/main/: app.py
src/db/: db_engine.py  models.py  repositories.py  uow.py
src/migrations/: env.py
src/migrations/versions/: 002f044afddf_init_migration.py  1002600231f1_init_migration.py  5e0edef9ad54_init_migration.py  90b777baaddf_create_indexes_and_constraits.py  9285e030bb0f_init_migration.py  c904bb51a304_init_migration.py
src/services/: auth_service.py  db_services.py
src/shemas/: __init__.py  base.py  ndt.py  personal.py  personal_certification.py  refresh_token.py  request_shemas.py  select_shemas.py  user.py  validators.py  welder.py  welder_certification.py
src/utils/: DTOs.py  funcs.py  uow.py  uows.py
test/: conftest.py  funcs.py  test_models.py
test/test_api/: client.py  conftest.py  test_auth.py  test_v1_api.py
test/test_db/: base_test_classes.py  conftest.py  test_db_services.py  test_repositories.py
test/test_services/: test_auth_service.py  test_db_services.py
test/test_shemas/: test_request_shemas.py
(+25 files in other folders)
